# forest-rl-platform

./: .env  .gitignore  ENVIRONMENT_GENERATION_ARCHITECTURE.md  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
apps/api/: Dockerfile  README.md  app.py  camar_wrapper.py  dispatcher.py  main.py  run_exports.py  run_render.py  runtime_monitor.py  test.py  test2.py  webrtc_routes.py  websocket_manager.py
apps/simulator/: Dockerfile  README.md  entrypoint.sh
apps/web/: README.md  package-lock.json  package.json
apps/worker/: README.md
contracts/: episode_log.schema.json  metrics.schema.json  openapi.yaml  replay.schema.json  ros_interfaces.md  scenario.schema.json  websocket_protocol.md
contracts/v1/: contract_docs.md  episode_log.schema.json  metrics.schema.json  preview.schema.json  replay.schema.json  ros_interfaces (версия от Владимира, дополняеться в процессе).md  ros_interfaces.md  scenario.schema.json  scientific_report.schema.json  scientific_suite.schema.json
contracts/v2/: ros_interfaces.md
data/: platform_dev.sqlite3
docs/: README.md  RLPlatform.docx  TODO.md  contracts_status.md  ~$Platform_description.docx
docs/api/: README.md
docs/architecture/: README.md  forest_robot_twin_architecture.drawio  forestrl_platform_architecture.drawio
docs/database/: README.md  Исходный код схемы базы данных dbml.docx
docs/experiments/: README.md  (+1 more)
ros2_ws/: Dockerfile  README.md  entrypoint.ros2.sh
scripts/: run_api.ps1  run_quick_mode.ps1  run_training.ps1  run_web.ps1  setup_dev.ps1
tests/: test_scenario_generator.py
(+265 files in other folders)
