[project]
name = "forest-rl-platform"
version = "0.1.0"
description = "Платформа для моделирования и обучения агентов в лесной среде"
requires-python = ">=3.11"

dependencies = [
    "gymnasium>=1.2.3",
    "keyboard>=0.13.5",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "stable-baselines3>=2.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
