[project]
name = "forest-rl-platform"
version = "0.1.0"
description = "Платформа для моделирования и обучения агентов в лесной среде"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.136.0",
    "gymnasium>=1.2.3",
    "jsonschema>=4.25.1",
    "keyboard>=0.13.5",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.49",
    "stable-baselines3>=2.7.1",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
